--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -1,15 +1,20 @@
 .service {
     border-radius: 10px;
-    padding-bottom: 10px;
+    padding: 7px;
     text-align: center;
-    height: 420px;
+    height: 500px;
     box-shadow: 2px 2px 5px #BABECC, 2px 2px 5px #BABECC;
     box-sizing: border-box;
     border-radius: 8px;
 }
 
 .service img {
-    border-radius: 8px;
+    border-radius: 10px;
+}
+
+.service-description {
+    text-align: justify;
+    padding: 0 10px;
 }
 
 .service-btn {
