--- a/src/Pages/Home/Service/Service.css
+++ b/src/Pages/Home/Service/Service.css
@@ -22,7 +22,7 @@
     padding: 5px 20px;
     font-size: 18px;
     color: white;
-    background-color: #51b1ff;
+    background-color: rgb(35, 166, 240);
     border-radius: 8px;
 }
 
