--- a/src/Pages/SignIn/SignIn.css
+++ b/src/Pages/SignIn/SignIn.css
@@ -40,6 +40,12 @@
     font-weight: bold;
 }
 
+/* .success-message {
+    color: green;
+    text-align: left;
+    font-weight: bold;
+} */
+
 .form-submit {
     width: 415px;
     height: 40px;
