--- a/src/Shared/Header/Header.css
+++ b/src/Shared/Header/Header.css
@@ -21,7 +21,7 @@
 .sign-out {
     text-decoration: none;
     border: none;
-    color: black;
+    color: rgb(35, 166, 240);
     margin-left: 35px;
     font-size: 18px;
     font-weight: bold;
