--- a/src/Pages/SignIn/SignIn.css
+++ b/src/Pages/SignIn/SignIn.css
@@ -5,7 +5,7 @@
 
 .form-container {
     width: 500px;
-    height: 480px;
+    height: 530px;
     margin: 50px auto;
     box-sizing: border-box;
     border-radius: 8px;
@@ -16,7 +16,7 @@
 
 .form-title {
     font-size: 35px;
-    color: #58b0f8;
+    color: rgb(35, 166, 240);
     text-align: center;
 }
 
